# agreement_analyzer

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: description.mdc
backend/: Dockerfile  config.py  llm.py  logger.py  prompts.py  pyproject.toml  requirements.txt  server.py  start.sh
extension/: background.js  manifest.json  options.html  options.js  result.html  result.js
