[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agreement-analyzer"
version = "0.1.0"
description = "Backend service for the Agreement Analyzer Chrome extension."
readme = "README.md"
requires-python = "==3.13.7"
dependencies = [
  "beautifulsoup4==4.14.2",
  "fastapi==0.121.3",
  "flask-cors==6.0.1",
  "google-genai==1.55.0",
  "langchain==1.0.8",
  "langchain-anthropic==1.3.1",
  "langchain-core==1.2.7",
  "langchain-google-genai==3.1.0",
  "langchain-ollama==1.0.1",
  "langchain-openai==1.1.7",
  "playwright==1.57.0",
  "pydantic==2.12.4",
  "python-dotenv==1.2.1",
  "requests==2.32.5",
  "uvicorn==0.38.0",
]

[tool.setuptools]
packages = []

